--- a/main.css
+++ b/main.css
@@ -17,3 +17,48 @@ button {
     font-size: 14px;
     cursor: pointer;
 }
+
+/* Lifts Page */
+.floor {
+    display: flex;
+    align-items: center;
+    margin-bottom: 60px;
+}
+
+.floor-label {
+    flex: 1;
+}
+
+.button-container {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.button-container button {
+    flex: 1;
+}
+
+.up-button {
+    background-color: green;
+    color: white;
+    cursor: pointer;
+}
+
+.down-button {
+    background-color: yellow;
+    cursor: pointer;
+}
+
+.separator {
+    border-top: 1px solid #ccc;
+    margin: 5px 0;
+    width: 100%;
+}
+
+.black-line {
+    border-bottom: 2px solid black;
+    flex: 1;
+    margin-left: 5px;
+    margin-right: 5px;
+}
