--- a/main.css
+++ b/main.css
@@ -62,3 +62,14 @@ button {
     margin-left: 5px;
     margin-right: 5px;
 }
+
+.lift {
+    width: 100px;
+    height: 50px;
+    background-color: blue;
+}
+.lift-container {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
