--- a/main.css
+++ b/main.css
@@ -19,20 +19,7 @@ button {
 }
 
 /* Lifts Page */
-.floor {
-    display: flex;
-    /* align-items: center; */
-    margin-bottom: 50px;
 
-}
-
-.floor-label {
-    flex: 1;
-    display: flex;
-    align-items: flex-end;
-    margin-left: 55px;
-
-}
 
 .button-container {
     display: flex;
@@ -67,16 +54,36 @@ button {
     flex: 1;
     margin-left: 55px;
     margin-right: 5px;
+    height: 130px;
+
+}
+
+.floor {
+    display: flex;
+    height: 130px;
+
+    /* padding-top: 20px; */
+    /* align-items: center; */
+    /* margin-bottom: 20px; */
+
+}
+
+.floor-label {
+    flex: 1;
+    display: flex;
+    align-items: flex-end;
+    margin-left: 55px;
+
 }
 
 .lift {
-    width: 60px;
-    height: 100px;
+    width: 100px;
+    height: 120px;
     background-color: blue;
     display: flex;
     position: relative;
-    align-items: center;
-
+    align-items: end;
+    margin-top: 10px;
 }
 
 .lift-container {
