--- a/main.css
+++ b/main.css
@@ -23,8 +23,9 @@ button {
 
 .button-container {
     display: flex;
-    gap: 10px;
+    /* gap: 10px; */
     align-items: center;
+    width: 100px;
 }
 
 .button-container button {
